# GDCM-self

./: README.md  _chla_epoch1_global_mask.py  _chla_epoch2_global_mask.py  _chla_epoch3_global_mask.py  dineof_revise_epoch1_chla_Global.py  dineof_revise_epoch1_chla_Global_epoch2.py  dineof_revise_epoch1_chla_Global_epoch3.py  pyproject.toml
scripts/: run_global_mask_inference.py
src/chlor_gdcm_eof/: __init__.py  config.py  data.py  encoding.py  eof.py  inference.py  layers.py  model.py  optimizers.py
